@@ -34,16 +34,11 @@ done
 set -e
 
 # cleanup for retry run if volume is not recreated
+# shellcheck disable=SC2046
 {
-    docker ps --all --quiet | xargs --no-run-if-empty docker kill || true
-    docker ps --all --quiet | xargs --no-run-if-empty docker rm || true
+    docker ps -aq | xargs -r docker kill || true
+    docker ps -aq | xargs -r docker rm || true
 }
-
-java_path="$(update-alternatives --config java | sed -n 's/.*(providing \/usr\/bin\/java): //p')"
-export JAVA_PATH=$java_path
-export SPARK_HOME="/spark-3.3.2-bin-hadoop3"
-export PATH=$SPARK_HOME/bin:$PATH
-export JAVA_TOOL_OPTIONS="-Djdk.attach.allowAttachSelf=true"
 
 echo "Start tests"
 export CLICKHOUSE_TESTS_SERVER_BIN_PATH=/clickhouse
